--- a/.travis.yml
+++ b/.travis.yml
@@ -1,3 +1,4 @@
+before_install: echo "BEFORE INSTALL"
 before_script: echo "BEFORE SCRIPT"
 script: echo "TRAVIS RANGE="${TRAVIS_COMMIT_RANGE}; env
 after_success: echo "SUCCESS"
