a4e65af8279b48ee9142b9978a66227103542dea replay gib_eks

--- a/.travis.yml
+++ b/.travis.yml
@@ -22,6 +22,7 @@ before_script:
 cache:
   directories:
   - $HOME/CACHE
+install: mvn clean install -DskipTests
 script:
 - touch /tmp/NOW
 - echo GIBSTUDYSTART $(date)
