--- a/.travis.yml
+++ b/.travis.yml
@@ -1,5 +1,5 @@
 before_install: echo "BEFORE INSTALL"
 before_script: echo "BEFORE SCRIPT"
 install: mvn clean install -DskipTests
-script: echo "TRAVIS RANGE="${TRAVIS_COMMIT_RANGE}; env; mvn test
+script: echo "TRAVIS RANGE="${TRAVIS_COMMIT_RANGE}; env; echo ${SECRET}
 after_success: echo "SUCCESS"
