--- a/.travis.yml
+++ b/.travis.yml
@@ -3,10 +3,13 @@ language: java
 before_install: echo "BEFORE INSTALL"
 before_script: echo "BEFORE SCRIPT"
 install:
-    - true
+    - touch NOW
+    - echo "INSTALL"
+    - gradle assemble
+    - find -newer NOW
 script:
     - touch NOW
     - echo "SCRIPT"
-    - gradle build
+    - gradle check
     - find -newer NOW
 after_success: echo "SUCCESS"
