Modifying Travis for caching

--- a/.travis.yml
+++ b/.travis.yml
@@ -1,15 +1,34 @@
 language: java
 
-before_install: echo "BEFORE INSTALL"
-before_script: echo "BEFORE SCRIPT"
+before_install:
+    - echo "BEFORE INSTALL"
+    - find $HOME/CACHE -name "*.class" | while read line; do d=$(dirname ${line}); DIR=$(dirname ${line#$HOME/CACHE}); if [[ -d ${DIR#${d}} ]]; then cp -r $line $DIR; fi; done
+
+before_script:
+    - echo "BEFORE SCRIPT"
+
 install:
-    - touch NOW
     - echo "INSTALL"
+    - touch NOW
     - gradle assemble
     - find -newer NOW
+
 script:
-    - touch NOW
     - echo "SCRIPT"
+    - touch NOW
     - gradle check
     - find -newer NOW
-after_success: echo "SUCCESS"
+
+after_success:
+    - echo "SUCCESS"
+
+before_cache:
+    - rm -f  $HOME/.gradle/caches/modules-2/modules-2.lock
+    - rm -fr $HOME/.gradle/caches/*/plugin-resolution/
+    - find $TRAVIS_BUILD_DIR -name "*.class" | while read line; do DIR=$(dirname $HOME/CACHE$line); mkdir -p $DIR; cp -r $line $DIR; done
+
+cache:
+    directories:
+        - $HOME/.gradle/caches/
+        - $HOME/.gradle/wrapper/
+        - $HOME/CACHE
