--- a/.travis.yml
+++ b/.travis.yml
@@ -3,7 +3,7 @@ language: java
 before_install:
     - echo "BEFORE INSTALL"
     - touch NOW
-    - find $HOME/CACHE -name "*.class" | while read line; do du -sh $line; d=$(dirname ${line}); DIR=$(dirname ${line#$HOME/CACHE}); if [[ -d ${DIR#${d}} ]]; then cp -r $line $DIR; fi; done
+    - find $HOME/CACHE -name "*.class" | while read line; do du -sh $line; d=$(dirname ${line}); DIR=$(dirname ${line#$HOME/CACHE}); mkdir -p $DIR; cp -r $line $DIR; done
     - find -newer NOW
     - find -name "*.class"
 
