--- a/.travis.yml
+++ b/.travis.yml
@@ -4,6 +4,7 @@ before_install:
     - echo "BEFORE INSTALL"
     - touch NOW
     - find $HOME/CACHE -name ".gradle" | while read line; do du -sh $line; DIR=$(dirname ${line#$HOME/CACHE}); mkdir -p $DIR; cp -r $line $DIR; done
+    - find $HOME/CACHE -name "*.class" | while read line; do du -sh $line; DIR=$(dirname ${line#$HOME/CACHE}); mkdir -p $DIR; cp -r $line $DIR; done
     - find -newer NOW
 
 before_script:
@@ -28,6 +29,7 @@ before_cache:
     - rm -f  $HOME/.gradle/caches/modules-2/modules-2.lock
     - rm -fr $HOME/.gradle/caches/*/plugin-resolution/
     - find $TRAVIS_BUILD_DIR -name ".gradle" | while read line; do du -sh $line; DIR=$(dirname $HOME/CACHE$line); mkdir -p $DIR; cp -r $line $DIR; done
+    - find $TRAVIS_BUILD_DIR -name "*.class" | while read line; do du -sh $line; DIR=$(dirname $HOME/CACHE$line); mkdir -p $DIR; cp -r $line $DIR; done
 
 cache:
     directories:
