--- a/.travis.yml
+++ b/.travis.yml
@@ -6,6 +6,7 @@ before_install:
     - find $HOME/CACHE -name ".gradle" | while read line; do du -sh $line; DIR=$(dirname ${line#$HOME/CACHE}); mkdir -p $DIR; cp -r $line $DIR; done
     - find $HOME/CACHE -name "*.class" | while read line; do du -sh $line; DIR=$(dirname ${line#$HOME/CACHE}); mkdir -p $DIR; cp -r $line $DIR; done
     - find -newer NOW
+    - cat $HOME/CACHE/cache
 
 before_script:
     - echo "BEFORE SCRIPT"
@@ -21,7 +22,7 @@ script:
     - touch NOW
     - gradle check
     - find -newer NOW
-    - echo SCRIPT $(date)
+    - echo SCRIPT $(date) > $HOME/CACHE/cache
 
 after_success:
     - echo "SUCCESS"
