--- a/.travis.yml
+++ b/.travis.yml
@@ -6,9 +6,7 @@ before_install:
     - find $HOME/CACHE -name ".gradle" | while read line; do du -sh $line; DIR=$(dirname ${line#$HOME/CACHE}); mkdir -p $DIR; cp -r $line $DIR; done
     - find $HOME/CACHE -name "*.class" | while read line; do du -sh $line; DIR=$(dirname ${line#$HOME/CACHE}); mkdir -p $DIR; cp -r $line $DIR; done
     - find -newer NOW
-    - if [ ! -f $HOME/CACHE/cache ]; then \
-        cat $HOME/CACHE/cache \
-      fi
+    - if [ ! -f $HOME/CACHE/cache ]; then   cat $HOME/CACHE/cache   fi
 
 before_script:
     - echo "BEFORE SCRIPT"
