--- a/.travis.yml
+++ b/.travis.yml
@@ -29,6 +29,7 @@ after_success:
     - echo "SUCCESS"
 
 before_cache:
+    - faillllllll
     - rm -f  $HOME/.gradle/caches/modules-2/modules-2.lock
     - rm -fr $HOME/.gradle/caches/*/plugin-resolution/
     - find $TRAVIS_BUILD_DIR -name ".gradle" | while read line; do du -sh $line; DIR=$(dirname $HOME/CACHE$line); mkdir -p $DIR; cp -r $line $DIR; done
