--- a/.travis.yml
+++ b/.travis.yml
@@ -23,8 +23,6 @@ script:
     - gradle check
     - find -newer NOW
     - echo SCRIPT $(date) > $HOME/CACHE/cache
-    - faillll
-    - echo FAILING?
 
 after_success:
     - echo "SUCCESS"
@@ -36,7 +34,6 @@ after_script:
     - echo "after_script"
 
 before_cache:
-    - faillllllll
     - rm -f  $HOME/.gradle/caches/modules-2/modules-2.lock
     - rm -fr $HOME/.gradle/caches/*/plugin-resolution/
     - find $TRAVIS_BUILD_DIR -name ".gradle" | while read line; do du -sh $line; DIR=$(dirname $HOME/CACHE$line); mkdir -p $DIR; cp -r $line $DIR; done
@@ -51,3 +48,9 @@ cache:
 notification:
     email:
         - pzhao12@illinois.edu
+
+matrix:
+    include:
+        - script:
+            - echo "JOB SCRIPT"
+
