try jdk with list

--- a/.travis.yml
+++ b/.travis.yml
@@ -53,4 +53,5 @@ matrix:
     include:
         - script:
           - echo "JOB SCRIPT"
-          jdk: oraclejdk7
+          jdk: 
+          - oraclejdk7
