--- a/.travis.yml
+++ b/.travis.yml
@@ -53,7 +53,6 @@ matrix:
     include:
         - script:
           - echo "JOB SCRIPT"
-          - echo $FOO;echo $BAR
+          - echo $FOO
           env:
           - FOO=foooo
-          - BAR=barrr
