--- a/.travis.yml
+++ b/.travis.yml
@@ -35,6 +35,8 @@ after_script:
     - echo "after_script"
 
 before_cache:
+    - echo BEFORE_CACHE
+    - echo $TRAVIS_TEST_RESULT
     - rm -f  $HOME/.gradle/caches/modules-2/modules-2.lock
     - rm -fr $HOME/.gradle/caches/*/plugin-resolution/
     - find $TRAVIS_BUILD_DIR -name ".gradle" | while read line; do du -sh $line; DIR=$(dirname $HOME/CACHE$line); mkdir -p $DIR; cp -r $line $DIR; done
