--- a/.travis.yml
+++ b/.travis.yml
@@ -17,7 +17,7 @@ install:
     - touch NOW
     - gradle assemble
     - find -newer NOW
-    - echo INSTALL $(date) > $HOME/CACHE/cache
+    - cat INSTALL $(date) > $HOME/CACHE/cache
     - failll
 
 script:
