--- a/.travis.yml
+++ b/.travis.yml
@@ -12,12 +12,12 @@ before_script:
     - echo "BEFORE SCRIPT"
     
 install:
-    - echo $HOME/CACHE/cache
+    - cat $HOME/CACHE/cache
     - echo "INSTALL"
     - touch NOW
     - gradle assemble
     - find -newer NOW
-    - cat INSTALL $(date) > $HOME/CACHE/cache
+    - echo INSTALL $(date) > $HOME/CACHE/cache
     - failll
 
 script:
