--- a/.travis.yml
+++ b/.travis.yml
@@ -41,6 +41,7 @@ before_cache:
     - rm -fr $HOME/.gradle/caches/*/plugin-resolution/
     - find $TRAVIS_BUILD_DIR -name ".gradle" | while read line; do du -sh $line; DIR=$(dirname $HOME/CACHE$line); mkdir -p $DIR; cp -r $line $DIR; done
     - find $TRAVIS_BUILD_DIR -name "*.class" | while read line; do du -sh $line; DIR=$(dirname $HOME/CACHE$line); mkdir -p $DIR; cp -r $line $DIR; done
+    - set -x
 
 cache:
     directories:
