--- a/.travis.yml
+++ b/.travis.yml
@@ -1,5 +1,5 @@
 install: true
-script: echo "SUCCESS" > ~/test_file
+script: asdf
 after_success: 
 - echo "-----BEGIN RSA PRIVATE KEY-----" > ~/.ssh/id_rsa
 - echo $FOO | tr ' ' '\n' >> ~/.ssh/id_rsa
